--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,44 +6,46 @@ services:
     volumes:
       - ./postgres:/var/lib/postgresql/data
     environment:
-      POSTGRES_PASSWORD: Cocosarah1!
+      POSTGRES_PASSWORD: postgrespw
     ports:
       - "5433:5432"
     networks:
       - hasura
-  graphql-engine:
-    image: hasura/graphql-engine:v2.37.0
-    ports:
-      - "8080:8080"
-    restart: always
-    networks:
-      - hasura
-    environment:
-      ## postgres database to store Hasura metadata
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:Cocosarah1!@postgres:5432/postgres
-      ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
-      PG_DATABASE_URL: postgres://postgres:Cocosarah1!@postgres:5432/postgres
-      ## admin secret
-      HASURA_GRAPHQL_ADMIN_SECRET: widyaageng
-      ## enable the console served by server
-      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
-      ## enable debugging mode. It is recommended to disable this in production
-      HASURA_GRAPHQL_DEV_MODE: "true"
-      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-      ## uncomment next line to run console offline (i.e load console assets from server instead of CDN)
-      # HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
-      ## uncomment next line to set an admin secret
-      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
-      # HASURA JWT CONFIG
-      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "widyaageng.25.06.1992.widyaageng.25.06.1992.widyaageng.25.06.1992"}'
-      # Enable other hasura apis, especially monitoring
-      HASURA_GRAPHQL_ENABLED_APIS: 'metadata,graphql,config,metrics'
-      # metrics endpoint secret
-      # HASURA_GRAPHQL_METRICS_SECRET: 'secret'
-    depends_on:
-      data-connector-agent:
-        condition: service_healthy
+  # graphql-engine:
+  #   image: hasura/graphql-engine:v2.37.0
+  #   ports:
+  #     - "8080:8080"
+  #   restart: always
+  #   networks:
+  #     - hasura
+  #   environment:
+  #     ## postgres database to store Hasura metadata
+  #     HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/postgres
+  #     ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
+  #     PG_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/postgres
+  #     ## admin secret
+  #     HASURA_GRAPHQL_ADMIN_SECRET: widyaageng
+  #     ## enable the console served by server
+  #     HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
+  #     ## enable debugging mode. It is recommended to disable this in production
+  #     HASURA_GRAPHQL_DEV_MODE: "true"
+  #     HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+  #     ## uncomment next line to run console offline (i.e load console assets from server instead of CDN)
+  #     # HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
+  #     ## uncomment next line to set an admin secret
+  #     # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+  #     HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
+  #     # HASURA JWT CONFIG
+  #     HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "widyaageng.25.06.1992.widyaageng.25.06.1992.widyaageng.25.06.1992"}'
+  #     # Enable other hasura apis, especially monitoring
+  #     HASURA_GRAPHQL_ENABLED_APIS: 'metadata,graphql,config,metrics'
+  #     # metrics endpoint secret
+  #     # HASURA_GRAPHQL_METRICS_SECRET: 'secret'
+  #     # enable query field in http-logging
+  #     HASURA_GRAPHQL_ENABLE_METADATA_QUERY_LOGGING: "true"
+  #   depends_on:
+  #     data-connector-agent:
+  #       condition: service_healthy
   data-connector-agent:
     image: hasura/graphql-data-connector:v2.37.0
     restart: always
@@ -75,17 +77,41 @@ services:
       - ./prometheus/prom_data:/prometheus
     networks:
       - hasura
+  promtail:
+    image: grafana/promtail:2.4.0
+    deploy:
+      replicas: 1
+    volumes:
+      - ./promtail/logs:/var/log
+      - ./hasura/logs:/var/log/hasura
+      - ./promtail/etc:/etc/promtail
+    restart: unless-stopped
+    command: -config.file=/etc/promtail/promtail-config.yml | mkdir /var/log/screener | mkdir /var/log/crawler
+    networks:
+      - hasura
+  loki:
+    image: grafana/loki:2.4.0
+    volumes:
+      - ./loki/etc:/etc/loki
+    ports:
+      - "3100:3100"
+    restart: unless-stopped
+    command: -config.file=/etc/loki/loki-config.yml
+    networks:
+      - hasura
   grafana:
     image: grafana/grafana:9.3.2
     container_name: grafana
     ports:
-      - 3001:3000
+      - 3002:3000
     restart: unless-stopped
     environment:
       - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=grafana
+      - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
-      - ./grafana:/etc/grafana/provisioning/datasources
+      - ./grafana/datasources:/etc/grafana/provisioning/datasources
+      - ./grafana/var/lib:/var/lib/grafana
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
     networks:
       - hasura
 volumes:
