dev(hasura 2.28): docker env

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,59 +11,70 @@ services:
       - "5433:5432"
     networks:
       - hasura
-  # graphql-engine:
-  #   image: hasura/graphql-engine:v2.37.0
-  #   ports:
-  #     - "8080:8080"
-  #   restart: always
-  #   networks:
-  #     - hasura
-  #   environment:
-  #     ## postgres database to store Hasura metadata
-  #     HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/postgres
-  #     ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
-  #     PG_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/postgres
-  #     ## admin secret
-  #     HASURA_GRAPHQL_ADMIN_SECRET: widyaageng
-  #     ## enable the console served by server
-  #     HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
-  #     ## enable debugging mode. It is recommended to disable this in production
-  #     HASURA_GRAPHQL_DEV_MODE: "true"
-  #     HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
-  #     ## uncomment next line to run console offline (i.e load console assets from server instead of CDN)
-  #     # HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
-  #     ## uncomment next line to set an admin secret
-  #     # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
-  #     HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
-  #     # HASURA JWT CONFIG
-  #     HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "widyaageng.25.06.1992.widyaageng.25.06.1992.widyaageng.25.06.1992"}'
-  #     # Enable other hasura apis, especially monitoring
-  #     HASURA_GRAPHQL_ENABLED_APIS: 'metadata,graphql,config,metrics'
-  #     # metrics endpoint secret
-  #     # HASURA_GRAPHQL_METRICS_SECRET: 'secret'
-  #     # enable query field in http-logging
-  #     HASURA_GRAPHQL_ENABLE_METADATA_QUERY_LOGGING: "true"
-  #   depends_on:
-  #     data-connector-agent:
-  #       condition: service_healthy
-  data-connector-agent:
-    image: hasura/graphql-data-connector:v2.37.0
-    restart: always
+  graphql-engine:
+    container_name: hge
+    image: hasura/graphql-engine:v2.28.0
     ports:
-      - 8081:8081
-    environment:
-      QUARKUS_LOG_LEVEL: ERROR # FATAL, ERROR, WARN, INFO, DEBUG, TRACE
-      ## https://quarkus.io/guides/opentelemetry#configuration-reference
-      QUARKUS_OPENTELEMETRY_ENABLED: "false"
-      ## QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT: http://jaeger:4317
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081/api/v1/athena/health"]
-      interval: 5s
-      timeout: 10s
-      retries: 5
-      start_period: 5s
+      - "8080:8080"
+    restart: always
+    labels:
+      logging: "promtail"
+      logging_jobname: "graphql-engine"
     networks:
       - hasura
+    environment:
+      ## postgres database to store Hasura metadata
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/hasuradb
+      ## this env var can be used to add the above postgres database to Hasura as a data source. this can be removed/updated based on your needs
+      PG_DATABASE_URL: postgres://postgres:postgrespw@postgres:5432/postgres
+      ## admin secret
+      HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      ## enable the console served by server
+      HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
+      ## enable debugging mode. It is recommended to disable this in production
+      HASURA_GRAPHQL_DEV_MODE: "true"
+      HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: "/srv/console-assets"
+      HASURA_GRAPHQL_ENABLED_LOG_TYPES: startup, http-log, webhook-log, websocket-log, query-log
+      ## uncomment next line to run console offline (i.e load console assets from server instead of CDN)
+      # HASURA_GRAPHQL_CONSOLE_ASSETS_DIR: /srv/console-assets
+      ## uncomment next line to set an admin secret
+      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
+      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"athena":{"uri":"http://data-connector-agent:8081/api/v1/athena"},"mariadb":{"uri":"http://data-connector-agent:8081/api/v1/mariadb"},"mysql8":{"uri":"http://data-connector-agent:8081/api/v1/mysql"},"oracle":{"uri":"http://data-connector-agent:8081/api/v1/oracle"},"snowflake":{"uri":"http://data-connector-agent:8081/api/v1/snowflake"}}}}'
+      # HASURA JWT CONFIG
+      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "jwt_secret.jwt_secret.jwt_secret.jwt_secret.jwt_secret"}'
+      # Enable other hasura apis, especially monitoring
+      HASURA_GRAPHQL_ENABLED_APIS: 'metadata,graphql,config,metrics'
+      # metrics endpoint secret
+      # HASURA_GRAPHQL_METRICS_SECRET: 'secret'
+      # enable query field in http-logging
+      HASURA_GRAPHQL_ENABLE_METADATA_QUERY_LOGGING: "true"
+    # depends_on:
+    #   data-connector-agent:
+    #     condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/healthz"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+  # data-connector-agent:
+  #   image: hasura/graphql-data-connector:v2.37.0
+  #   restart: always
+  #   ports:
+  #     - 8081:8081
+  #   environment:
+  #     QUARKUS_LOG_LEVEL: ERROR # FATAL, ERROR, WARN, INFO, DEBUG, TRACE
+  #     ## https://quarkus.io/guides/opentelemetry#configuration-reference
+  #     QUARKUS_OPENTELEMETRY_ENABLED: "false"
+  #     ## QUARKUS_OPENTELEMETRY_TRACER_EXPORTER_OTLP_ENDPOINT: http://jaeger:4317
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:8081/api/v1/athena/health"]
+  #     interval: 5s
+  #     timeout: 10s
+  #     retries: 5
+  #     start_period: 5s
+  #   networks:
+  #     - hasura
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -78,15 +89,18 @@ services:
     networks:
       - hasura
   promtail:
-    image: grafana/promtail:2.4.0
+    image: grafana/promtail:2.8.2
     deploy:
       replicas: 1
     volumes:
       - ./promtail/logs:/var/log
       - ./hasura/logs:/var/log/hasura
       - ./promtail/etc:/etc/promtail
+      - ./promtail/etc/promtail-config.yml:/etc/promtail/promtail-config.yml:ro
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
-    command: -config.file=/etc/promtail/promtail-config.yml | mkdir /var/log/screener | mkdir /var/log/crawler
+    command: -config.file=/etc/promtail/promtail-config.yml
     networks:
       - hasura
   loki:
